--- a/CasoMujeresPreProcesado.ipynb
+++ b/CasoMujeresPreProcesado.ipynb
@@ -473,14 +473,21 @@
         "\n",
         "#Creo que para lemmatization necesito pasar a inglés. Revisar eso.\n",
         "\n",
+        "\n",
+        "#Pre-Procesado: poner en minuscula, quitar stop words (tanto español como inglés), crear mi propio vocabulario. Pre-entreno.\n",
+        "\n",
+        "#Ni idea, la verdad\n",
         "def clean_data(text):\n",
         "    text = re.sub(r'[^ \\nA-Za-z0-9À-ÖØ-öø-ÿ/]+', '', text)\n",
         "    text = re.sub(r'[\\\\/×\\^\\]\\[÷]', '', text)\n",
         "    return text\n",
+        "\n",
+        "#Poner en minúsula\n",
         "def change_lower(text):\n",
         "    text = text.lower()\n",
         "    return text\n",
         "\n",
+        "#stopwords español\n",
         "stopwords_list = stopwords.words(\"spanish\")\n",
         "def remover(text):\n",
         "    text_tokens = text.split(\" \")\n",
@@ -488,6 +495,7 @@
         "    text = ' '.join(final_list)\n",
         "    return text\n",
         "\n",
+        "#stopwords inglés.\n",
         "stopwords_list2 = stopwords.words(\"english\")\n",
         "def remover2(text):\n",
         "    text_tokens = text.split(\" \")\n",
@@ -502,6 +510,7 @@
         "        w2v_df[i] = w2v_df[i][0].split(\" \")\n",
         "    return w2v_df\n",
         "\n",
+        "#Se crea el vocabulario (palabras más similares, o sumer y restar vectores...)\n",
         "def train_w2v(w2v_df):\n",
         "    cores = multiprocessing.cpu_count()\n",
         "    w2v_model = Word2Vec(min_count=4,\n",
@@ -674,7 +683,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMv1AVQLAOQNXGlhjCSbYkU",
+      "authorship_tag": "ABX9TyPMr087VOZieSmsQHytExYS",
       "include_colab_link": true
     },
     "kernelspec": {
