--- a/CasoMujeresPreProcesado.ipynb
+++ b/CasoMujeresPreProcesado.ipynb
@@ -525,6 +525,7 @@
         "    return w2v_model\n",
         "\n",
         "\n",
+        "#Aplico a la biografía todas las cosas de pre-procesado.\n",
         "before = type(df.Biografía[0])\n",
         "#print(before)\n",
         "df[['Biografía']] = df[['Biografía']].astype(str)\n",
@@ -533,16 +534,19 @@
         "df['Biografía'] = df['Biografía'].apply(remover)\n",
         "df['Biografía'] = df['Biografía'].apply(remover2)\n",
         "\n",
+        "#lo junto todo el un solo string.\n",
         "text = ' '.join(df['Biografía'])\n",
         "\n",
-        "\n",
+        "#lo entreno para tener mi propio vocabulario.\n",
         "w2v_df = get_w2vdf(df)\n",
         "w2v_model = train_w2v(w2v_df)\n",
         "\n",
+        "#prueba a ver qué pasa.\n",
         "print(w2v_model.wv.most_similar(positive=[\"universidad\"]))\n",
         "\n",
         "\n",
         "\n",
+        "#Aquí entiendo que debo pasar a inglés porque no hace nada\n",
         "# Descargar recursos necesarios para NLTK (solo es necesario la primera vez)\n",
         "nltk.download('punkt')\n",
         "nltk.download('wordnet')\n",
@@ -683,7 +687,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMr087VOZieSmsQHytExYS",
+      "authorship_tag": "ABX9TyO1M5uyKSKl6kVGFPEZ8hhM",
       "include_colab_link": true
     },
     "kernelspec": {
